<resources>
    <string name="app_name">Login_led_solutions</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="led_solutions_name">LED Solutions</string>
    <string name="Name">Username</string>
    <string name="email_login">Email</string>
    <string name="email_register">Email</string>
    <string name="name">Nome</string>
    <string name="cellphone">Celular</string>
    <string name="cpf">CPF</string>
    <string name="sign_in">Cadastre-se</string>
    <string name="register">Cadastrar</string>
    <string name="passwordRegister">Senha</string>
    <string name="PasswordRegisterConfirm">Confirmar senha</string>
    <string name="buttonLogout">Sair</string>
    <string name="textHelloUser">Olá, Everlyn!</string>
    <string name="textInformations">Minhas informações</string>
    <string name="buttonWallet">Minha carteira</string>
    <string name="buttonBack">Voltar</string>
    <string name="textPrincipalWallet">Minhas opções</string>
    <string name="accountBalance">Saldo em conta</string>
    <string name="investment">Investimentos</string>
    <string name="extract">Minhas movimentações</string>
    <string name="cardCash">10.000,00</string>
    <string name="investments_wallet">Investimentos</string>
</resources>