<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBack"
        app:backgroundTint="#808080"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textPrincipalWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPrincipalWallet"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="85dp" />

    <Button
        android:id="@+id/accountBalance"
        android:layout_width="272dp"
        android:layout_height="135dp"
        android:text="@string/accountBalance"
        android:textSize="18sp"
        app:backgroundTint="#4DB6AC"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="332dp" />

    <Button
        android:id="@+id/investment"
        android:layout_width="272dp"
        android:layout_height="135dp"
        android:text="@string/investment"
        android:textSize="18sp"
        app:backgroundTint="#00695C"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="492dp" />

</androidx.constraintlayout.widget.ConstraintLayout>